fix: list items gap

--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,7 @@ body {
 
     box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.1);
 
-    max-width: 50rem;
+    max-width: 55rem;
     border-radius: 8px;
 
     display: grid;
@@ -154,6 +154,9 @@ body {
 
 .perks {
     list-style: none;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 }
 
 .perks>li {
